--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" class="input-1" placeholder=" 📍 Search for restaurants in your City ⬇">
     </div>
     <div class="headings">
-        <p>Popular localities in <span> 🇮🇳India🇮🇳</span></p>
+        <p>Popular localities in <span> India</span></p>
     </div>
 
     <div class="second-section">
